2012-02-08  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (go-gc-tests): Don't run chan/select2.go on
	systems which don't support -fsplit-stack.

2012-02-08  Andrew MacLeod  <amacleod@redhat.com>

	* gcc.dg/simulate-thread/simulate-thread.exp: Use -O0, -O2, and -O3.
	* gcc.dg/simulate-thread/simulate-thread.gdb: Don't display every
	machine instuction in the log.

2012-02-08  Jack Howarth <howarth@bromo.med.uc.edu>

	* lib/gcc-simulate-thread.exp (simulate-thread): Increase timeout
	  to 20 seconds.

2012-02-08  Magnus Granberg  <zorry@gentoo.org>

	PR driver/48524
	* gcc.dg/pr48524.c: New test.
	* gcc.dg/pr48524.spec: New spec file for test.

2012-02-08  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/32380
	* gfortran.dg/vect/pr32380.f90:  New test.

2012-02-08  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52151
	* gfortran.dg/realloc_on_assign_12.f90: New.

2012-02-08  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/52170
	* gcc.dg/torture/pr52170.c: New testcase.

2012-02-08  Jakub Jelinek  <jakub@redhat.com>

	PR gcov-profile/52150
	* gcc.dg/tree-prof/pr52150.c: New test.

	PR rtl-optimization/52139
	* gcc.dg/pr52139.c: New test.

2012-02-07  Jason Merrill  <jason@redhat.com>

	PR c++/51675
	* g++.dg/cpp0x/constexpr-union3.C: New.

	PR c++/52035
	* g++.dg/lto/pr52035_0.C: New.

2012-02-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* gfortran.dg/guality/pr41558.f90: Use lp64 instead of hppa*64*-*-*.
	* gcc.dg/special/weak-1.c: Likewise.
	* gcc.dg/ucnid-12.c: Likewise.
	* gcc.dg/torture/pr45678-1.c: Likewise.
	* gcc.dg/torture/pr45678-2.c: Likewise.
	* gcc.dg/vector-4.c: Likewise.
	* gcc.dg/ipa/inline-5.c: Likewise.
	* gcc.dg/ucnid-11.c: Likewise.
	* gcc.misc-tests/gcov-13.c: Likewise.
	* gcc.misc-tests/gcov-14.c: Likewise.
	* g++.dg/ext/label13.C: Likewise.
	* gcc.dg/tree-ssa/ssa-fre-31.c: Use dg-additional-options for extra
	hppa*-*-hpux* options.
	* gcc.dg/tree-ssa/ssa-fre-33.c: Likewise.